--- a/myBeats.html
+++ b/myBeats.html
@@ -60,7 +60,7 @@
             <div class="songItem">
                 <img src="Song Poster/Neyo - So Sick.jpg" alt="Neyo - So Sick" class="songPoster">
                 <h3>Neyo - So Sick</h3>
-                <p>A hypnotic and sultry R&B-pop track with a pulsating beat and seductive vocals, blending smooth harmonies with an alluring, futuristic atmosphere.</p>
+                <p>A soulful R&B ballad filled with raw emotion, reflecting on the struggle of moving on from a past love.</p>
                 <audio controls>
                     <source src="Beat/Neyo - So Sick.mp3" type="audio/mpeg">
                 </audio>
@@ -68,7 +68,7 @@
             <div class="songItem">
                 <img src="Song Poster/usher.jpg" alt="Usher - My Boo" class="songPoster">
                 <h3>Usher - My Boo</h3>
-                <p>A soulful R&B ballad filled with raw emotion, reflecting on the struggle of moving on from a past love.</p>
+                <p>A nostalgic and smooth R&B duet that reminisces about a past love that still lingers in memory.</p>
                 <audio controls>
                     <source src="Beat/Usher - My boo.mp3" type="audio/mpeg">
                 </audio>
