--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="navBackground">
             <div class="Buttons">
                 <a href="biographyPage.html" class="Button"><i class="fas fa-user-circle"></i>&nbsp;&nbsp;Biography</a>
-                <a href="SkillsPage.html" class="Button"><i class="fas fa-tools"></i>&nbsp;&nbsp;Skills & Hobbies</a>
+                <a href="skillsPage.html" class="Button"><i class="fas fa-tools"></i>&nbsp;&nbsp;Skills & Hobbies</a>
                 <a href="resumePage.html" class="Button"><i class="fas fa-file-alt"></i>&nbsp;&nbsp;Resume</a>
                 <a href="photoGallery.html" class="Button"><i class="fas fa-images"></i>&nbsp;&nbsp;Gallery</a>
                 <a href="myBeats.html" class="Button"><i class="fas fa-music"></i>&nbsp;&nbsp;My Beats</a>
