--- a/skillsPage.html
+++ b/skillsPage.html
@@ -107,7 +107,7 @@
                         </a>
                     </div>
                     <div class="photo">
-                        <a href="SkillsPage/" target="imageViewTab">
+                        <a href="SkillsPage/Volleyball.jpg" target="imageViewTab">
                             <img src="SkillsPage/Volleyball.jpg" alt="Volleyball">
                             <div class="desc">Playing Volleyball</div>
                         </a>
