--- a/resumePage.html
+++ b/resumePage.html
@@ -132,6 +132,6 @@
         </div>
     </div>
     <div class="buttomButtons">
-    <a href="#" class="buttomButton"><i class="fas fa-arrow-up"></i></a><a href="/index.html" class="buttomButton"><i class="fas fa-home"></i></a></div>
+    <a href="#" class="buttomButton"><i class="fas fa-arrow-up"></i></a><a href="index.html" class="buttomButton"><i class="fas fa-home"></i></a></div>
 </body>
 </html>
