--- a/myFilms.html
+++ b/myFilms.html
@@ -86,7 +86,7 @@
     </section>
     <div class="buttomButtons">
         <a href="#" class="buttomButton"><i class="fas fa-arrow-up"></i></a>
-        <a href="/index.html" class="buttomButton"><i class="fas fa-home"></i></a>
+        <a href="index.html" class="buttomButton"><i class="fas fa-home"></i></a>
     </div> 
 </body>
 </html>
