--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
         <div class="mediaContainer">
             <video class="video" controls loop muted>
-                <source src="introVidTest.mp4" type="video/mp4">
+                <source src="introVid.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="picture">
